--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ SET(CMAKE_CXX_STANDARD 17)
 PROJECT(KVLSM)
 ADD_LIBRARY(LibKVLSM
         kvstore.cc kvstore.h kvstore_api.h memTable.cpp memTable.h bloomFilter.cpp bloomFilter.h ssTable.cpp ssTable.h
-        level.h
+        level.h level.cpp
 )
 ADD_EXECUTABLE(correctness correctness.cc)
 ADD_EXECUTABLE(persistence persistence.cc)
